--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,16 +1,16 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: linear-gradient(90deg, blue, orange);
+    background-image: linear-gradient(90deg, rgb(0, 0, 0), rgb(0, 0, 0));
 }
 
 .calculator-grid{
-    border: 3px solid black;
     border-radius: 15px;
     width: 500px;
+    background-color: rgb(255, 240, 174);
 }
 
-.display{
+#input{
     width: 99%;
     height: 80px;
     padding: 5px;
@@ -33,6 +33,4 @@ button{
     width: 100px;
 }
 
-.equal-span-four{
-    width: 420%;
-}
+
