--- a/indexStyle.css
+++ b/indexStyle.css
@@ -33,4 +33,21 @@ button{
     width: 100px;
 }
 
+@media only screen and (max-width: 500px){
+    .calculator-grid{
+        width: 100% !important ;
+    }
 
+    button{
+        height: 25px; 
+        width: 50px;
+    }
+
+    *{
+        font-size: 10px;
+    }
+
+    .calculator-keys{
+        grid-gap: 5px;
+    }
+}
